# 12AngryMen

./: .gitignore  README.md  dca.ipynb  pyproject.toml
scripts/: 12AngryMen.fountain
